feat: Implement Ktor HTTP client and Kermit logger
This commit introduces a Ktor HTTP client setup and integrates the Kermit logging library.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ local.properties
 captures
 .externalNativeBuild
 .cxx
+gradle.properties
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
