Update Maven publishing workflow to use ubuntu-latest
The GitHub Actions workflow for publishing to Maven Central has been updated to run on `ubuntu-latest` instead of `macos-latest`.

This change aims to potentially improve build times and reduce costs, as Ubuntu runners are generally faster and more cost-effective than macOS runners.

--- a/.github/workflows/publish-to-maven.yml
+++ b/.github/workflows/publish-to-maven.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   publish:
     name: Release build and publish
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
+
 
     steps:
       - name: Check out code
